cmake_minimum_required(VERSION 3.10)
project(dijkstra_boost)

set(CMAKE_CXX_STANDARD 11)

add_executable(dijkstra_boost main.cpp)
set(BOOST_ROOT "/usr/local/Cellar/boost/1.60.0")
set(Boost_USE_MULTITHREADED ON)
FIND_PACKAGE(Boost 1.60.0 COMPONENTS program_options required)
find_package(Boost 1.60.0 COMPONENTS system filesystem REQUIRED)
if(Boost_FOUND)
    message(STATUS "Boost_INCLUDE_DIRS: ${Boost_INCLUDE_DIRS}")
    message(STATUS "Boost_LIBRARIES: ${Boost_LIBRARIES}")
    message(STATUS "Boost_VERSION: ${Boost_VERSION}")
    include_directories(${Boost_INCLUDE_DIRS})
endif()
INCLUDE_DIRECTORIES(${INCLUDE_DIRECTORIES} ${Boost_INCLUDE_DIRS})
LINK_DIRECTORIES(${LINK_DIRECTORIES} ${Boost_LIBRARY_DIRS})
add_executable(BoostTest main.cpp)
if(Boost_FOUND)
    target_link_libraries(BoostTest ${Boost_LIBRARIES})
endif()